--- a/lib/Getopt/Kinoko.pod
+++ b/lib/Getopt/Kinoko.pod
@@ -121,11 +121,17 @@
 =begin para
 	C<OptionSet> manager multi C<Option>, it provide many interface handle C<Option> add or access.
 =end para
+=begin code
+	my OptionSet $optset .= new(); # create a OptionSet
+=end code
 
 =item1 method insert-normal(Str $opts) returns OptionSet
 =begin para
 	Insert a normal group into C<OptionSet>. Normal group is main/default group of the C<OptionSet>, it has many Option can set by user at the same time.
 =end para
+=begin code
+	$optset.insert-normal("h|help=b;v|version=b;?=b;|usage=b;");
+=end code
 
 =item1 method get-normal() returns Group::Normal
 =begin para
@@ -211,5 +217,72 @@
 =begin para
 	Return has each-NOA handler or not.
 =end para
+
+=item1 multi method push-option(Str $opt, :&callback, :$normal) returns OptionSet
+=begin para
+	Insert a C<Option> into normal group. C<&callback> will be call When option set by user.
+=end para
+
+=item1 multi method push-option(Str $opt, $value, :&callback, :$normal) returns OptionSet
+=begin para
+	Insert a C<Option> has a default value into normal group.
+=end para
+
+=item1 method append-options(Str $opts, :$normal) returns OptionSet
+=begin para
+	Insert multi C<Option> into normal group.
+=end para
+
+=item1 method get-option(Str $name, :$long, :$short, :$normal, :$radio, :$multi) returns Option
+=begin para
+	Get a C<Option> by its name and option type from normal、radio or multi group.
+=end para
+
+=item1 method has-option(Str $name, :$long, :$short) returns Bool
+=begin para
+	Return C<True> if C<Option> C<$name> exists.
+=end para
+
+=item1 method set-value(Str $name, $value, :$long, :$short) returns Bool
+=begin para
+	Set C<Option> C<$name> value to C<$value>. Return C<False> if value check failed or C<Option> not exists. The method not call C<&callback> associate with C<Option> C<$name>.
+=end para
+
+=item1 method set-value-callback(Str $name, $value, :$long, :$short) returns Bool
+=begin para
+	Set C<Option> C<$name> value to C<$value> and call C<&callback> associate with C<Option> C<$name>. Return C<False> if value check failed or C<Option> not exists.
+=end para
+
+=item1 method set-callback(Str $name, &callback, :$long, :$short) returns Bool
+=begin para
+	Set C<Option> C<$name> callback to &callback.
+=end para
+
+=item1 method has-value(Str $name, :$long, :$short) returns Bool
+=begin para
+	Return C<True> if C<Option> C<$name> has value.
+=end para
+
+=item1 method AT-KEY(::?CLASS::D: Str \key)
+=begin para
+	Return C<Option> C<key> value.
+=end para
+=begin code
+	say $optset<h>; # equal to "say $optset{'help'}"
+=end code
+
+=item1 method ASSIGN-KEY(::?CLASS::D:D Str \key, $value)
+=begin para
+	Set C<Option> C<key> value to C<$value>.
+=end para
+=begin code
+	$optset<h> = False;
+=end code
+
+=item1 method EXISTS-KEY(Str \key) returns Bool
+=begin para
+	Return C<True> if C<Option> C<key> exists.
+=end para
+
 
 =end pod
